cabal-version:      3.0
name:               hs-rrd
version:            0.1.0.0
synopsis:           Haskell bindings to RRDTool

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bach
maintainer:         info@thomasbach.dev

-- A copyright notice.
-- copyright:
category:           Database

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hs-rrd-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
