cabal-version:      3.0
name:               hs-rrd
version:            0.1.0.0
synopsis:           Haskell bindings to RRDTool

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bach
maintainer:         info@thomasbach.dev

-- A copyright notice.
-- copyright:
category:           Database

common common
    default-language: Haskell2010
    build-depends:    base
    ghc-options:      -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Wno-orphans

library
    import:           common
    exposed-modules:  RRDTool
                    , RRDTool.LowLevel
    hs-source-dirs:   src
    pkgconfig-depends: librrd

test-suite hs-rrd-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    hs-rrd
                    , sydtest
    ghc-options:      -Wno-missing-home-modules
                      -threaded
                      -rtsopts -with-rtsopts=-N
    build-tool-depends: sydtest-discover:sydtest-discover
